# cmucal-backend

./: .flaskenv  .gitignore  Dockerfile  README.md  alembic.ini  dockerfile  mock_data.txt  pyproject.toml  pytest.ini  requirements.txt  run.py
.github/: pull_request_template.md
app/: __init__.py  cli.py  env.py
app/api/: admin.py  base.py  events.py  google.py  organizations.py  schedule.py  users.py
app/config/: __init__.py  settings.py
app/errors/: ical.py
app/models/: __init__.py  admin.py  calendar_source.py  category.py  courses.py  event.py  event_occurrence.py  event_tag.py  google_event.py  models.py  organization.py  recurrence_override.py  recurrence_rule.py  schedule.py  schedule_category.py  schedule_org.py  user.py  user_saved_event.py
app/services/: db.py  google_service.py  ical.py
app/utils/: auth.py  course_data.py  date.py
course_agent/: README.md  requirements.txt
course_agent/app/: env.py
course_agent/scripts/: run_all_courses.py  visualize_graph.py
migrations/: env.py
migrations/versions/: 0cb38d445403_add_event_timezone.py  3905128935dc_course_agent_update.py  654f07c67db9_initial_schema.py  7d654afb7791_add_unique_constraint_to_courses_course_.py  ad803e9c36ef_avoid_duplicate_ical_import.py  c0f134426e07_update_courses.py  c83995e192d8_add_uniqueness_constraint_for_location.py  d2932b3f8a6a_added_recurrence_override.py  (+3 more)
reports/: courses_no_calendar_found.csv  successful_courses.csv
scraper/: README.md  main.py  models.py  process_handshake_to_supabase.py  requirements.txt
tests/: conftest.py  test_smoke.py
(+73 files in other folders)
